--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -24,6 +24,112 @@
         Your Workout is being generated...
       </div>
       <div id="chat-log"></div>
+    </main>
+    <script src="script.js"></script>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>GPT4 Chat Workout Generator</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <style>
+      .row{
+        display: flex;
+      }
+      .row > div{
+        flex: 1;
+      }
+    </style>
+  </head>
+
+  <body class="bg-light">
+    <main class="container mt-5">
+      <h1 class="text-center mb-4">AI Workout Generator</h1>
+      <div class = "row">
+        <div class = "col-md-6">
+      <form action="" class="bg-white p-4 rounded shadow h-100">
+        <div class="form-group">
+          <label for="age">Age:</label>
+          <input
+            type="text"
+            id="age"
+            class="form-control"
+            placeholder="Enter your age"
+          />
+        </div>
+        <div class="form-group">
+          <label for="experience">Experience:</label>
+          <input
+            type="text"
+            id="experience"
+            class="form-control"
+            placeholder="Enter your experience"
+          />
+        </div>
+        <div class="form-group">
+          <label for="intensity">Intensity:</label>
+          <input
+            type="text"
+            id="intensity"
+            class="form-control"
+            placeholder="Enter desired intensity"
+          />
+        </div>
+        <div class="form-group">
+          <label for="rest">Rest:</label>
+          <input
+            type="text"
+            id="rest"
+            class="form-control"
+            placeholder="Enter desired rest"
+          />
+        </div>
+        <div class="form-group">
+          <label for="length">Length:</label>
+          <input
+            type="text"
+            id="length"
+            class="form-control"
+            placeholder="Enter desired length"
+          />
+        </div>
+        <div class="form-group">
+          <label for="goals">Goals:</label>
+          <input
+            type="text"
+            id="goals"
+            class="form-control"
+            placeholder="Enter your goals"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">
+          Generate Workout Plan
+        </button>
+      </form>
+    </div>
+    <div class = "col-md-6">
+      <div class = "bg-white p-4 rounded shadow h-100">
+        <div class = "form-group">
+          <label for "extra">Extra Notes for AI:</label>
+          <textarea id = "extra" class = "form-control" placeholder = "Enter any extra notes you want the AI to consider"></textarea>
+        </div>
+      </div>
+    </div>
+  </div>
+      <div id="intermission" class="my-4 text-center" style="display: none">
+        <p class="mb-0">Your Workout is being generated...</p>
+      </div>
+      <div id="chat-log" class="mt-4"></div>
     </main>
     <script src="script.js"></script>
   </body>
